Added basic style to all html pages

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="recipe list">
         <li><a href="./recipes/lasagna.html">Brenda's Lasagna</a></li>
         <li><a href="./recipes/tostada.html">Crispy Oven Beef-and-Bean Tostadas</a></li>
         <li><a href="./recipes/piccata.html">Quick Salmon Piccata</a></li>
-
     </ul>
 </body>
 </html>
